CF-206: Fix nodes sidebar spacing underneath sidebar header

--- a/src/shared/assets/styles/components/_layout.scss
+++ b/src/shared/assets/styles/components/_layout.scss
@@ -149,7 +149,7 @@
   .nodes-sidebar {
     header {
       padding: 8px;
-      margin-bottom: $pad;
+      margin-bottom: 12px;
       padding-bottom: $pad;
       border-bottom: 1px solid $color-border;
     }
